Modifique el panel a color rojo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="materialize/css/materialize.css">
 </head>
 <body>
-	 <div class="card-panel hoverable teal light-green">This is a card panel with a teal lighten-2 class</div>
+	 <div class="card-panel hoverable  red darken-4">This is a card panel with a teal lighten-2 class</div>
 	 <div class="card-panel hoverable amber accent-3">
       <span class="lime-text text-darken-4">This is a card panel with dark blue text</span>
      </div>
