--- a/index.html
+++ b/index.html
@@ -37,6 +37,35 @@
      		</div>
      		<div class="row">
      			<div class="col s12 m12">
+     				<div class="fixed-action-btn vertical">
+					    <a class="btn-floating btn-large red">
+					      <i class="large material-icons">mode_edit</i>
+					    </a>
+					    <ul>
+					      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+					      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+					      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+					      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+					    </ul>
+					  </div>
+     			</div>
+ 
+     			<div class="col s12 m12">
+     				<div class="fixed-action-btn toolbar">
+				    <a class="btn-floating btn-large red">
+				      <i class="large material-icons">mode_edit</i>
+				    </a>
+				    <ul>
+				      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">insert_chart</i></a></li>
+				      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">format_quote</i></a></li>
+				      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">publish</i></a></li>
+				      <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">attach_file</i></a></li>
+				    </ul>
+				 </div>
+     			</div>
+     		</div>
+     		<div class="row">
+     			<div class="col s12 m12">
      				 <table class="bordered responsive-table">
 				        <thead>
 				          <tr>
