--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
      			</div>
      		</div>
      		<div class="row">
+     			<div class="col s8 m8">
+     				<div class="row">
+				        <div class="col s12 m7">
+				          <div class="card">
+				            <div class="card-image">
+				              <img src="4.jpeg" style="width: auto; height:300px;">
+				              <span class="card-title">Card Title</span>
+				            </div>
+				            <div class="card-content">
+				              <p>I am a very simple card. I am good at containing small bits of information.
+				              I am convenient because I require little markup to use effectively.</p>
+				            </div>
+				            <div class="card-action">
+				              <a href="#">This is a link</a>
+				            </div>
+				          </div>
+				        </div>
+				      </div>
+     			</div>
+     		</div>
+     		<div class="row">
      			<div class="col s12 m12">
      				<div class="fixed-action-btn vertical">
 					    <a class="btn-floating btn-large red">
