--- a/estructura2.html
+++ b/estructura2.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Estructura 2</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="materialize/css/materialize.css">
 </head>
 <body>
@@ -69,6 +70,64 @@
 			  </div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col s12 m3">
+			<ul class="collection with-header">
+		        <li class="collection-header"><h4>Redes Sociales</h4></li>
+		        <li class="collection-item"><div>Facebook<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+		        <li class="collection-item"><div>Twitter<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+		        <li class="collection-item"><div>YouTube<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+		        <li class="collection-item"><div>Instagram<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+		    </ul>
+		</div>
+		<div class="col s12 m9">
+			<div class="col m8 offset-m2">
+				<h3 class="center-align">Inicio de Sesión</h3>
+				<div class="row">
+				    <form class="col s12">
+				      <div class="row">
+				        <div class="input-field col m12">
+				          <i class="material-icons prefix">account_circle</i>
+				          <input id="icon_prefix" type="text" class="validate">
+				          <label for="icon_prefix">First Name</label>
+				        </div>
+				        <div class="input-field col m12">
+				          <i class="material-icons prefix">phone</i>
+				          <input id="icon_telephone" type="tel" class="validate">
+				          <label for="icon_telephone">Telephone</label>
+				        </div>
+				      </div>
+				    </form>
+				  </div>
+			</div>
+		</div>
+
+	</div>
+	<footer class="page-footer blue-grey lighten-2">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
 	
 
 	<script src="js/jquery-3.3.1.js"></script>
