Agregue el boton al formulario por que se me habia olvidado. XD!!

--- a/estructura2.html
+++ b/estructura2.html
@@ -97,6 +97,7 @@
 				          <label for="icon_telephone">Telephone</label>
 				        </div>
 				      </div>
+				      <button class="btn right">Iniciar Sesión</button>
 				    </form>
 				  </div>
 			</div>
