--- a/estructura2.html
+++ b/estructura2.html
@@ -8,6 +8,17 @@
 	<link rel="stylesheet" href="materialize/css/materialize.css">
 </head>
 <body>
+	<nav>
+		<div class="nav-wrapper cyan darken-3">
+		  <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+		  <ul class="right hide-on-med-and-down">
+		    <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+		    <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+		    <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+		    <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+		  </ul>
+		</div>
+	</nav>
 	<div class="row">
 		<div class="col s6 m3">
 			<div class="card">
@@ -104,7 +115,7 @@
 		</div>
 
 	</div>
-	<footer class="page-footer blue-grey lighten-2">
+	<footer class="page-footer blue-grey lighten-1">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
